fix - UI : correction of a visual bug when devtools is closed (lol) causing button and modal to be out of screen

--- a/asset/components.css
+++ b/asset/components.css
@@ -15,7 +15,6 @@ body {
 
 .toast_title {
 	padding: 0.6rem;
-	background-color: rgba(0, 128, 128, 0.8);
 }
 
 .toast_content {
@@ -36,7 +35,7 @@ body {
 	display: flex;
 	height: 30vh;
 	flex-direction: column-reverse;
-	width: 10%;
+	width: 12%;
 }
 
 /* ------------------------------------------------------------------- MODAL ------------------------------------------------- */
@@ -58,6 +57,7 @@ body {
 
 .modal {
 	z-index: 2;
+	top: 0;
 	position: absolute;
 	background-color: black;
 	border-radius: 3rem;
@@ -104,18 +104,31 @@ body {
 	0% {
 		opacity: 00%;
 		width: 01%;
+		color: transparent;
+		background-color: teal;
+	}
+
+	10% {
+		opacity: 100%;
+		width: 98%;
+		color: transparent;
 	}
 
 	15% {
-		opacity: 100%;
-		width: 98%;
+		color: teal;
+		background-color: white;
 	}
 
+	18% {
+		color: black;
+	}
 
 	85% {
 		opacity: 100%;
 		width: 98%;
 		margin-left: 8px;
+		color: transparent;
+
 	}
 
 
